# OilCompiler

./: CMakeLists.txt  README.md
include/: oil.hh
include/internals/files/: comp.hh  decomp.hh  file.hh
include/internals/misc/: data.hh  debug.hh
src/: main.cc
src/internals/files/: comp.cc  decomp.cc  files.cc
src/internals/misc/: debug.cc
